UI changes for overlapping issue of variant selectors

--- a/app/assets/stylesheets/spree/frontend/spree_product_hover_zoom.css
+++ b/app/assets/stylesheets/spree/frontend/spree_product_hover_zoom.css
@@ -15,6 +15,9 @@ the installer will append this file to the app vendored assets here: 'vendor/ass
   top: 0;
   right: 0;
   left: 0;
+}
+
+.product-hover-zoom .drift-zoom-pane {
   height: 400px;
 }
 
